--- a/templates/teachers.html
+++ b/templates/teachers.html
@@ -125,4 +125,6 @@
 
 <script src="{{ url_for('static', filename='js/teacher.js') }}"></script>
 <script src="{{ url_for('static', filename='js/teacher_pageroutes.js') }}"></script>
+<script src="{{ url_for('static', filename='js/uploads.js') }}"></script>
+
 {% endblock %}
